@@ -1,11 +1,12 @@
+SUBDIRS = internal
+
 include_HEADERS = \
 	libstdf.h \
-	libstdf_types.h \
+	libstdf_bswap.h \
 	libstdf_const.h \
 	libstdf_funcs.h \
 	libstdf_systems.h \
-	libstdf_sys_config.h \
-	libstdf_bswap.h
+	libstdf_types.h
+
 noinst_HEADERS = \
-	libstdf_internal.h \
 	lzw.h
