@@ -1,0 +1,5 @@
+noinst_HEADERS = \
+	headers.h \
+	libstdf.h \
+	win32.h \
+	win32_options.h
