@@ -1,5 +1,5 @@
 /**
- * @file libstdf_win32_options.h
+ * @file win32_options.h
  * @brief Enable/Disable libstdf features.
  * @internal
  */
@@ -9,8 +9,8 @@
  * please see: http://opensource.org/licenses/bsd-license.php
  */
 
-#ifndef _LIBSTDF_WIN32_OPTIONS_H
-#define _LIBSTDF_WIN32_OPTIONS_H
+#ifndef _LIBSTDF_INTERNAL_WIN32_OPTIONS_H
+#define _LIBSTDF_INTERNAL_WIN32_OPTIONS_H
 
 #define HAVE_ZIP     0
 #define HAVE_GZIP    0
@@ -29,4 +29,4 @@
 #define HAVE_SYS_TYPES_H   1
 #define HAVE_TIME_H        1
 
-#endif /* _LIBSTDF_WIN32_OPTIONS_H */
+#endif /* _LIBSTDF_INTERNAL_WIN32_OPTIONS_H */
